new_tests/semantics/type/bad/043_CS2.cm

def local a:Int = 5 

choice(a) {
    on 'c' {}
    other {}
}
